# capy-chat

./: .gitignore  LICENSE  README.md  pyproject.toml
capy_chat/: start_api.py
capy_chat/api/: db.sqlite  main.py
capy_chat/api/lib/: __init__.py  database.py  db_setup.py  logger.py  models.py  pw_utils.py  session.py  user.py  utils.py
capy_chat/api/routes/: __init__.py  basic_response.py  session_api.py  user_api.py  ws_api.py
capy_chat/capy_chat/api/: connection_manager.py  main.py  user_api.py
capy_chat/capy_chat/api/routes/: __init__.py  ws_api.py
capy_chat/capy_chat/static/: index.html  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  tailwind.config.ts
capy_chat/capy_chat/static/src/components/: signInWindow.svelte
capy_chat/capy_chat/static/src/routes/: +layout.svelte  +page.svelte
capy_chat/capy_chat/static/src/routes/sign-on/: +page.server.ts  +page.svelte  signInWindow.svelte
capy_chat/static/: package-lock.json  svelte.config.js
capy_chat/static/src/lib/: tailwind.svelte
capy_chat/static/src/lib/components/: CurrentUser.svelte  currentUser.svelte
capy_chat/static/src/lib/scss/: _variables.scss  global.scss
capy_chat/static/src/routes/: +layout.svelte
capy_chat/static/src/routes/dashboard/: +page.svelte
capy_chat/static/src/routes/sign-on/: +page.server.ts  +page.svelte  signInWindow.svelte
capy_chat/test/: conftest.py  test_pw_utils.py  test_session.py  test_user.py  test_ws.py
