[project]
name = "capy-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.35",
    "websockets>=13.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)8s] %(message)s"
log_format = "[%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
